# asyncore-wsgi

./: .gitignore  LICENSE.txt  Readme.rst  setup.cfg  setup.py
.github/workflows/: publish.yml
asyncore_wsgi/: SimpleWebSocketServer.py  __init__.py
example/: example.py  websocket.html
