[metadata]
name = asyncore-wsgi
version = 0.0.11
author = Roman Miroshnychenko
author_email = roman1972@gmail.com
url = https://github.com/romanvm/asyncore-wsgi
description = Asynchronous WSGI and WebSocket server based on asyncore module
long_description = file: Readme.rst
long_description_content_type = text/x-rst
keywords = wsgi web server
license = MIT
classifiers =
    Development Status :: 4 - Beta
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: WSGI :: Server
platform = any

[options]
packages =
    asyncore_wsgi
zip_safe = False
include_package_data = True
python_requires = >=3.6
